<resources>
    <string name="app_name">moovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Вход</string>
    <string name="field_login">Войти</string>
    <string name="email_field">Почта</string>
    <string name="field_password">Пароль</string>
    <string name="field_register">Зарегистрироваться</string>
    <string name="field_confirm_password">Повторите пароль</string>
    <string name="field_username">Юзернейм</string>
    <string name="register">Регистрация</string>
    <string name="AuthNavHost">AuthNavHost</string>
    <string name="MainNavHost">MainNavHost</string>
    <string name="noAcc">Нет аккаунта</string>
    <string name="action_log_out">Выйти</string>
    <string name="retry">Загрузить</string>
    <string name="email_placeholder">Почта: </string>
    <string name="username_placeholder">Юзернейм: </string>
    <string name="logout">Выйти</string>
    <string name="search">Найти</string>
</resources>